@@ -36,6 +36,11 @@ GNU coreutils NEWS                                    -*- outline -*-
 
 ** Changes in behavior
 
+  df, with no non-option argument and recent enough kernel/tools, would
+  print a long UUID-including file system name, pushing second and subsequent
+  columns far to the right.  Now, when that long name refers to a symlink,
+  df prints the usually-short referent instead.
+
   tail -f now uses polling (not inotify) when any of its file arguments
   resides on a file system of unknown type.  In addition, for each such
   argument, tail -f prints a warning with the FS type magic number and a
